--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,11 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.14.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
